# Savior4GuGuHua

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
libs/: build.gradle.kts
libs/dexkit/: build.gradle.kts
libs/dexkit/src/main/cpp/: CMakeLists.txt
libs/dexkit/src/main/cpp/core/: native-bridge.cpp
libs/dexkit/src/main/cpp/include/android/: log.h
libs/dexkit/src/main/cpp/log/: log.cc  nativestreambuf.h
libs/dexkit/src/main/kotlin/icu/ketal/util/: Log.kt  Utils.kt
libs/dexkit/src/main/kotlin/io/luckypray/dexkit/: DexKitBridge.kt
libs/stub/src/main/kotlin/android/os/: Bundle.kt  Parcelable.kt
libs/stub/src/main/kotlin/android/view/: View.kt
libs/stub/src/main/kotlin/android/widget/: TextView.kt
libs/stub/src/main/kotlin/androidx/annotation/: NonNull.kt  Nullable.kt
libs/stub/src/main/kotlin/com/tencent/common/app/: AppInterface.kt
libs/stub/src/main/kotlin/com/tencent/mobileqq/app/: QQAppInterface.kt
libs/stub/src/main/kotlin/me/ketal/data/: ConfigData.kt
libs/stub/src/main/kotlin/mqq/app/: AppRuntime.kt
main/: build.gradle.kts
main/src/main/java/io/github/qauxv/util/: Initiator.java
main/src/main/kotlin/: Main.kt
main/src/main/kotlin/cc/ioctl/util/: HostInfo.kt
main/src/main/kotlin/io/github/qauxv/config/: ConfigManager.kt
main/src/main/kotlin/io/github/qauxv/util/: FakeClass.kt
main/src/main/kotlin/io/github/qauxv/util/dexkit/: DexKit.kt  DexKitTarget.kt
test/: build.gradle.kts
test/src/main/kotlin/: Main.kt
test/src/main/kotlin/io/github/qauxv/util/: FakeClass.kt  HostInfo.kt  Log.kt
